Modificações na primeira página
- Imagem de fundo;
- Logo do colégio;

--- a/index.html
+++ b/index.html
@@ -5,23 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="estilo.css">
+    <link rel="icon" href="imagem/logo-colegio-nucleo-703x703.png" type="image/png">
     <style>
+        body{
+            margin: 0;
+	        padding: 0;
+	        background-image: url('imagem/img-fundo-azul-laranja.jpg');
+            background-size: cover;
+	        background-position: center;
+	        background-attachment: fixed;
+        }
         div.alert.alert-success{
+            background-color: #F0FFFF;
             width: 600px;
+            /*height: 100%;*/
             text-align: center;
+            font-size: large;
             margin-left: 32%;
-            margin-top: 15px;
-            
+            margin-top: 10%;
         }
 
         div.botoes{
             text-align: center;
-
         }
     </style>
 </head>
 <body>
+    
     <div class="alert alert-success" role="alert">
+        <img class="img-colegio" src="imagem/logo-colegio-nucleo-703x703.png" alt="">
         <h4 class="alert-heading">Confimação SSA</h4>
         <br>
         <p>Se você tem a nota SSA 1 clique no botão SIM para ser direcionado para a Calculadora SSA.</p>
